# poor_server_stl

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  aaa.txt  tree.txt  vcpkg.json
config/: DB_config.json  db_config.lua  gateway_config.json  gateway_config.lua  server_config.lua
config/excel/: 成就表.xlsx
config/hearthstone/: achievement.lua  card.lua
config/server_config/: cfg_battle_server.lua  cfg_central_server.lua  cfg_db.lua  cfg_db_server.lua  cfg_file_server.lua  cfg_gateway_server.lua  cfg_logic_server.lua  (+1 more)
docunment/: DOCUMENTATION_SUMMARY.md  README.md  todolist.md  tree.txt  优化路线图.md  文件树.txt
project_document/: code_layout.md  library.md  log.md  model.md  model_play_hearthstone  readme.md  relest.md  rpc.md
protobuf/: CMakeLists.txt  common.proto  proto_config.pb.cc  proto_config.pb.h  proto_config.proto  server_battle.proto  server_central.proto  server_db.proto  server_file.proto  server_gateway.proto  server_logic.proto  server_login.proto  server_matching.proto  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h  service.proto
protobuf/central/: server_central.grpc.pb.cc  server_central.grpc.pb.h  server_central.pb.cc  server_central.pb.h  server_central.proto
protobuf/common/: common.proto
protobuf/cpp/: CMakeLists.txt  common.proto  server_battle.proto  server_chat.proto  server_file.proto  server_gateway.proto  server_logic.proto  server_matching.proto  server_store.proto  skynet_messages.proto
protobuf/cpp/src/: common.grpc.pb.h  common.pb.cc  common.pb.h  server_battle.grpc.pb.cc  server_battle.grpc.pb.h  server_battle.pb.cc  server_battle.pb.h  server_chat.grpc.pb.cc  server_chat.grpc.pb.h  server_chat.pb.cc  server_chat.pb.h  server_db.pb.cc  server_file.grpc.pb.cc  server_file.grpc.pb.h  server_gateway.grpc.pb.h  server_gateway.pb.h  server_logic.grpc.pb.cc  server_logic.grpc.pb.h  server_logic.pb.cc  server_logic.pb.h  server_login.grpc.pb.cc  server_login.pb.h  server_matching.grpc.pb.cc  server_store.grpc.pb.cc  server_store.grpc.pb.h  server_store.pb.cc  server_store.pb.h  skynet_messages.grpc.pb.cc  skynet_messages.grpc.pb.h  skynet_messages.pb.cc  skynet_messages.pb.h
protobuf/data/: server_data.grpc.pb.cc  server_data.grpc.pb.h  server_data.pb.cc  server_data.pb.h  server_data.proto
protobuf/file/: server_file.grpc.pb.cc  server_file.grpc.pb.h  server_file.pb.cc  server_file.pb.h  server_file.proto
protobuf/gateway/: server_gateway.grpc.pb.cc  server_gateway.grpc.pb.h  server_gateway.pb.cc  server_gateway.pb.h  server_gateway.proto
protobuf/logic/: server_logic.grpc.pb.cc  server_logic.grpc.pb.h  server_logic.pb.cc  server_logic.pb.h  server_logic.proto
protobuf/login/: server_login.grpc.pb.cc  server_login.grpc.pb.h  server_login.pb.cc  server_login.pb.h  server_login.proto
protobuf/skynet/: skynet_battle.proto  skynet_collection.proto  skynet_common.proto  skynet_db.proto  skynet_logic.proto  skynet_match.proto  skynet_session.proto  test.proto
protobuf/skynet/src/: test.pb
protobuf/src/: common.grpc.pb.cc  common.grpc.pb.h  common.pb.cc  common.pb.h  server_battle.grpc.pb.cc  server_battle.grpc.pb.h  server_battle.pb.cc  server_battle.pb.h  server_central.grpc.pb.cc  server_central.grpc.pb.h  server_central.pb.cc  server_central.pb.h  server_data.grpc.pb.h  server_data.pb.cc  server_db.grpc.pb.cc  server_db.grpc.pb.h  server_db.pb.cc  server_db.pb.h  server_file.grpc.pb.cc  server_file.grpc.pb.h  server_file.pb.cc  server_file.pb.h  server_gateway.grpc.pb.cc  server_gateway.grpc.pb.h  server_gateway.pb.cc  server_gateway.pb.h  server_logic.grpc.pb.h  server_logic.pb.cc  server_logic.pb.h  server_login.grpc.pb.h  server_login.pb.cc  server_login.pb.h  server_matching.grpc.pb.cc  server_matching.grpc.pb.h  server_matching.pb.cc  server_matching.pb.h
skynet_src/: test_proto.lua
src/: main.cpp
src/central/: CMakeLists.txt  main.cpp
src/central/server/: central_server.cpp  central_server.h
src/central/src/: main.cpp
src/central/src/central/: central_server.cpp  central_server.h
src/data/: CMakeLists.txt  main.cpp
src/data/server/: data_server.cpp  data_server.h
src/data/sql/: users.sql
src/data/src/: main.cpp
src/data/src/data/: data_server.cpp  data_server.h  db_connection_pool.h  de_connection_pool.cpp
src/db/: CMakeLists.txt  main.cpp
src/db/server/: db_connection_pool.cpp  db_connection_pool.h  db_server.cpp  db_server.h
src/db/sql/hearthstone/: player_class_wins.sql  player_friends.sql  playerdata.sql
src/db/sql/poor_users/: poor_users.sql
src/file/: CMakeLists.txt  main.cpp
src/file/server/: file_server.cpp  file_server.h
src/file/src/: main.cpp
src/file/src/file/: file_server.cpp  file_server.h
src/gateway/: CMakeLists.txt  main.cpp
src/gateway/common/: gateway_forward_helpers.h
src/gateway/server/: gateway_forward_db.cpp  gateway_forward_file.cpp  gateway_forward_logic.cpp  gateway_forward_login.cpp  gateway_forward_skynet_game.cpp  gateway_forward_skynet_player.cpp  gateway_forward_skynet_test.cpp  gateway_internal_tcp.cpp  gateway_server.cpp  gateway_server.h  skynet_client.cpp  skynet_client.h  skynet_tcp_manager.cpp  skynet_tcp_manager.h
src/gateway/src/: main.cpp
src/gateway/src/gateway/: gateway_server.cpp  gateway_server.h  gateway_service.cpp  gateway_service.h
src/logic/: CMakeLists.txt  main.cpp
src/logic/common/: event.cpp  event.h
src/logic/common/achievement/: achievement.cpp  achievement.h  achievement_manager.cpp  achievement_manager.h
src/logic/common/card/: card.cpp  card.h  card_minion.cpp  card_minion.h
src/logic/server/: logic_server.cpp  logic_server.h
src/logic/src/: main.cpp
src/login/: CMakeLists.txt  main.cpp
src/login/server/: login_server.cpp  login_server.h
src/login/src/: main.cpp
src/login/src/login/: login.service.h  login_server.cpp  login_server.h  login_service.cpp  login_service.h
src/redis/: CMakeLists.txt  README.md  main.cpp  redis_server.cpp  redis_server.h
tools/: QUICK_REFERENCE.md  README.md  verify_common_grpc_fix.sh
(+184 files in other folders)
